--- a/projeto/package.json
+++ b/projeto/package.json
@@ -19,7 +19,9 @@
     "gh-pages": "^6.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.20.0",
+    "react-select": "^5.8.1",
     "styled-components": "^6.1.1"
   },
   "devDependencies": {
