--- a/projeto/src/data/projects.json
+++ b/projeto/src/data/projects.json
@@ -7,6 +7,7 @@
     "tecnologias": "React Js, TailwindCss",
     "unidade": "Rio-Barra",
     "periodo": "2024.2",
+    "data": "24/09/2024",
     "dec": "Projeto desenvolvido para simular uma plataforma de software as a service.",
     "paragrafo": "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s..."
   },
@@ -18,6 +19,7 @@
     "tecnologias": "React Native, Redux",
     "unidade": "São Paulo",
     "periodo": "2024.1",
+    "data": "24/09/2024",
     "dec": "Aplicativo mobile para lojas de e-commerce, permitindo compras e pagamentos diretamente via app.",
     "paragrafo": "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s..."
   },
@@ -29,6 +31,7 @@
     "tecnologias": "Node.js, MongoDB",
     "unidade": "Belo Horizonte",
     "periodo": "2023.2",
+    "data": "24/09/2024",
     "dec": "Sistema completo para gestão de empresas, desde o controle de estoque até a emissão de relatórios financeiros.",
     "paragrafo": "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s..."
   },
@@ -40,6 +43,7 @@
     "tecnologias": "HTML, CSS, JavaScript",
     "unidade": "Rio-Centro",
     "periodo": "2024.1",
+    "data": "24/09/2024",
     "dec": "Desenvolvimento de uma landing page moderna e responsiva para a presença digital de uma empresa.",
     "paragrafo": "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s..."
   },
@@ -51,6 +55,7 @@
     "tecnologias": "Python, Dash, Pandas",
     "unidade": "DF",
     "periodo": "2023.2",
+    "data": "24/09/2024",
     "dec": "Dashboard interativo para análise e visualização de dados em tempo real.",
     "paragrafo": "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s..."
   },
@@ -62,6 +67,7 @@
     "tecnologias": "Vue.js, Firebase",
     "unidade": "Rio-Barra",
     "periodo": "2023.1",
+    "data": "24/09/2024",
     "dec": "Plataforma para cursos online com gerenciamento de usuários, trilhas de aprendizado e certificados.",
     "paragrafo": "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s..."
   },
@@ -73,6 +79,7 @@
     "tecnologias": "Gatsby, GraphQL",
     "unidade": "São Paulo",
     "periodo": "2024.2",
+    "data": "24/09/2024",
     "dec": "Desenvolvimento de um portfólio pessoal para destacar habilidades e projetos.",
     "paragrafo": "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s..."
   },
@@ -84,6 +91,7 @@
     "tecnologias": "Flutter, Firebase",
     "unidade": "Belo Horizonte",
     "periodo": "2024.1",
+    "data": "24/09/2024",
     "dec": "Aplicativo para serviços de delivery com geolocalização e rastreamento de pedidos.",
     "paragrafo": "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s..."
   },
@@ -95,6 +103,7 @@
     "tecnologias": "React.js, Node.js",
     "unidade": "DF",
     "periodo": "2023.2",
+    "data": "24/09/2024",
     "dec": "Sistema para reservas de hotéis, com gerenciamento de quartos, check-ins e pagamentos.",
     "paragrafo": "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s..."
   },
@@ -106,6 +115,7 @@
     "tecnologias": "Flutter, Node.js",
     "unidade": "Rio-Centro",
     "periodo": "2023.1",
+    "data": "24/09/2024",
     "dec": "Aplicativo para controle financeiro pessoal, com integração bancária e categorização de despesas.",
     "paragrafo": "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s..."
   },
@@ -117,6 +127,7 @@
     "tecnologias": "Angular, Firebase",
     "unidade": "Rio-Barra",
     "periodo": "2024.2",
+    "data": "24/09/2024",
     "dec": "Desenvolvimento de uma plataforma de e-commerce para diversos vendedores.",
     "paragrafo": "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s..."
   },
@@ -128,6 +139,7 @@
     "tecnologias": "React.js, AWS",
     "unidade": "Belo Horizonte",
     "periodo": "2024.1",
+    "data": "24/09/2024",
     "dec": "Plataforma de streaming de vídeo sob demanda, com suporte a vídeos em alta definição.",
     "paragrafo": "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s..."
   },
@@ -139,6 +151,7 @@
     "tecnologias": "React Native, Redux",
     "unidade": "São Paulo",
     "periodo": "2024.1",
+    "data": "24/09/2024",
     "dec": "Aplicativo para monitoramento de saúde e bem-estar, com integração com dispositivos wearable.",
     "paragrafo": "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s..."
   },
@@ -150,6 +163,7 @@
     "tecnologias": "Vue.js, Firebase",
     "unidade": "DF",
     "periodo": "2023.2",
+    "data": "24/09/2024",
     "dec": "Sistema para gerenciamento de tarefas, com suporte a diferentes projetos e colaboração em equipe.",
     "paragrafo": "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s..."
   }
