--- a/projeto/package.json
+++ b/projeto/package.json
@@ -1,6 +1,6 @@
 {
   "name": "um-react",
-  "homepage": "/",
+  "homepage": "https://marcelleloha.github.io/Projeto_Front_End",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
